kustomize/env/aws/perf/acc-ui-route.yml
kind: Route
apiVersion: apps/v1
metadata:
  name: acc-ui-route
spec:
  host: www-acc-perf.apps.ocp4.innovateuk.ukri.org
